@@ -1,3 +1,8 @@
+** v4.65 for Shadowland Pre-Patch, 18.11.2020**
+* Fixed a typo.. whoops, thx Kringel
+* Replaced the AFK Time with a Logout timer
+
+
 ** v4.64 for Shadowland Pre-Patch, 18.11.2020**
 * The AutoButtons will now hide in Pet Battle
 * Dont force the spacing on UnitFrames Buffs/Debuffs
