@@ -1,3 +1,8 @@
+[b][color=orange]v4.65 for Shadowland PrePatch[/color], 18.11.2020[/b][list]
+[*]Fixed a typo.. whoops, thx Kringel
+[*]Replaced the AFK Time with a Logout timer[/list]
+
+
 [b][color=orange]v4.64 for Shadowland PrePatch[/color], 18.11.2020[/b][list]
 [*]The AutoButtons will now hide in Pet Battle
 [*]Dont force the spacing on UnitFrames Buffs/Debuffs
